rename no projeto e na solução

--- a/LocadoraAPITeste/video-store-api-tests.csproj
+++ b/LocadoraAPITeste/video-store-api-tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LocadoraAPI\LocadoraAPI.csproj" />
+    <ProjectReference Include="..\LocadoraAPI\video-store-api.csproj" />
   </ItemGroup>
 
 </Project>
